{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 78,
  "lineage": "d4096100-99f9-7857-b694-d3b75e837908",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17",
            "arn_suffix": "app/safewallet-alb/d9917a8a77026b17",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "safewallet-alb-1695226228.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "safewallet-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cbb66275c2402f22"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003aadc1ba6aac230"
              },
              {
                "subnet_id": "subnet-04d9e4e79a6ed416c"
              }
            ],
            "subnets": [
              "subnet-003aadc1ba6aac230",
              "subnet-04d9e4e79a6ed416c"
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-alb",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03db63ef8fd504d92",
            "arn": "arn:aws:ec2:us-east-1:430597289699:elastic-ip/eipalloc-03db63ef8fd504d92",
            "association_id": "eipassoc-0499696852a63ba86",
            "domain": "vpc",
            "id": "eipalloc-03db63ef8fd504d92",
            "network_border_group": "us-east-1",
            "network_interface": "eni-064e50afb598aa690",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-52-72-32-248.compute-1.amazonaws.com",
            "public_ip": "52.72.32.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "safewallet-nat-eip"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-nat-eip",
              "Project": "SafeWallet Core"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:internet-gateway/igw-0e230b86db551c4d8",
            "id": "igw-0e230b86db551c4d8",
            "owner_id": "430597289699",
            "tags": {
              "Name": "safewallet-igw"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-igw",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17",
            "arn_suffix": "app/safewallet-alb/d9917a8a77026b17",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "safewallet-alb-1695226228.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "safewallet-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cbb66275c2402f22"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003aadc1ba6aac230"
              },
              {
                "subnet_id": "subnet-04d9e4e79a6ed416c"
              }
            ],
            "subnets": [
              "subnet-003aadc1ba6aac230",
              "subnet-04d9e4e79a6ed416c"
            ],
            "tags": {
              "Name": "safewallet-alb"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-alb",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:listener/app/safewallet-alb/d9917a8a77026b17/ea56c3f2e3c9e5cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:targetgroup/safewallet-api-tg/dc2f340c0c5c228a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:430597289699:listener/app/safewallet-alb/d9917a8a77026b17/ea56c3f2e3c9e5cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "SafeWallet Core"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.api_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430597289699:targetgroup/safewallet-api-tg/dc2f340c0c5c228a",
            "arn_suffix": "targetgroup/safewallet-api-tg/dc2f340c0c5c228a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200,403",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:430597289699:targetgroup/safewallet-api-tg/dc2f340c0c5c228a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:430597289699:loadbalancer/app/safewallet-alb/d9917a8a77026b17"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "safewallet-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "SafeWallet Core"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03db63ef8fd504d92",
            "association_id": "eipassoc-0499696852a63ba86",
            "connectivity_type": "public",
            "id": "nat-0819cd71c973c942c",
            "network_interface_id": "eni-064e50afb598aa690",
            "private_ip": "10.0.1.211",
            "public_ip": "52.72.32.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d9e4e79a6ed416c",
            "tags": {
              "Name": "safewallet-nat-gateway"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-nat-gateway",
              "Project": "SafeWallet Core"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:route-table/rtb-0229337dedc0f5475",
            "id": "rtb-0229337dedc0f5475",
            "owner_id": "430597289699",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "safewallet-isolated-data-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-isolated-data-rt",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:route-table/rtb-03411721c48728ce2",
            "id": "rtb-03411721c48728ce2",
            "owner_id": "430597289699",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0819cd71c973c942c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "safewallet-private-app-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-private-app-rt",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:route-table/rtb-0f375c598684f6f57",
            "id": "rtb-0f375c598684f6f57",
            "owner_id": "430597289699",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e230b86db551c4d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "safewallet-public-rt"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-public-rt",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d7ad40bb555fe55",
            "route_table_id": "rtb-0229337dedc0f5475",
            "subnet_id": "subnet-0dad515478323faa0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated_data",
            "aws_subnet.private_data_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0193e6da75c654c78",
            "route_table_id": "rtb-0229337dedc0f5475",
            "subnet_id": "subnet-06398fb2ac4e77624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated_data",
            "aws_subnet.private_data_b",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1626868aed5e07a",
            "route_table_id": "rtb-03411721c48728ce2",
            "subnet_id": "subnet-016c8e408c484944e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b78cbf62ef5340d",
            "route_table_id": "rtb-03411721c48728ce2",
            "subnet_id": "subnet-0ffb850fd4d217338"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_subnet.private_app_b",
            "aws_subnet.public_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a593be7b5e1d26ff",
            "route_table_id": "rtb-0f375c598684f6f57",
            "subnet_id": "subnet-04d9e4e79a6ed416c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a02a588d0f36c3e2",
            "route_table_id": "rtb-0f375c598684f6f57",
            "subnet_id": "subnet-003aadc1ba6aac230"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:security-group/sg-0cbb66275c2402f22",
            "description": "Permite trafego HTTP/HTTPS da internet para o ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite toda a saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbb66275c2402f22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP da Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS da Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "safewallet-alb-sg",
            "name_prefix": "",
            "owner_id": "430597289699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "safewallet-alb-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-alb-sg",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:security-group/sg-0628736f5ae64df17",
            "description": "Permite trafego APENAS vindo do ALB para a porta 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite saida para a internet (via NAT Gateway)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0628736f5ae64df17",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Trafego do Load Balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbb66275c2402f22"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "safewallet-ecs-sg",
            "name_prefix": "",
            "owner_id": "430597289699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "safewallet-ecs-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-ecs-sg",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:security-group/sg-0c48c18914d594760",
            "description": "Permite conexao no PostgreSQL APENAS vinda do backend ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite saida para atualizacoes (gerenciado pela AWS)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48c18914d594760",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Conexao do backend Spring Boot",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0628736f5ae64df17"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "safewallet-rds-sg",
            "name_prefix": "",
            "owner_id": "430597289699",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "safewallet-rds-sg"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-rds-sg",
              "Project": "SafeWallet Core"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a837610669a022e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-016c8e408c484944e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c8e408c484944e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-private-app-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-private-app-1a",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-0ffb850fd4d217338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffb850fd4d217338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-private-app-1b"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-private-app-1b",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-0dad515478323faa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad515478323faa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-private-data-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-private-data-1a",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-06398fb2ac4e77624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06398fb2ac4e77624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-private-data-1b"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-private-data-1b",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-04d9e4e79a6ed416c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d9e4e79a6ed416c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-public-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-public-1a",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:subnet/subnet-003aadc1ba6aac230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003aadc1ba6aac230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430597289699",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "safewallet-public-1b"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-public-1b",
              "Project": "SafeWallet Core"
            },
            "vpc_id": "vpc-03a837610669a022e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.safewallet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "safewallet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430597289699:vpc/vpc-03a837610669a022e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dea7631438f95a63",
            "default_route_table_id": "rtb-0e26543f04bd10141",
            "default_security_group_id": "sg-0460a5a78cb0c771c",
            "dhcp_options_id": "dopt-0a6d0538b0cde3cc9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a837610669a022e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e26543f04bd10141",
            "owner_id": "430597289699",
            "tags": {
              "Name": "safewallet-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "safewallet-vpc",
              "Project": "SafeWallet Core"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}